Revert "Replace deprecated Locale constructors with Locale.of() factory method (#17)": Postpone because it requires Java 21
This reverts commit f103d42295ba57ddd699e838d1d9e0a18028fee1.